--- a/Vim/doc/Install.txt
+++ b/Vim/doc/Install.txt
@@ -29,6 +29,7 @@ Install:
     (2) Add %EX_DEV%\GnuWin32\bin into Environment Path
     (3) Copy $VIM\toolkit\idutils\id-lang.map to %EX_DEV%\GnuWin32\share\id-lang.map 
     (3) Copy $VIM\toolkit\src-highlight\ex\*.* to %EX_DEV%\GnuWin32\share\source-highlight
+    (4) Copy $VIM\toolkit\octave\.octaverc to %EX_DEV%\Octave\.octaverc
 
 4. Install Graphviz
     (1) Install graphiviz to EX_DEV\Graphviz
