--- a/_doc/exVim.wiki
+++ b/_doc/exVim.wiki
@@ -70,13 +70,13 @@ With exVim you can:
     # [[ShowMarks]]
     # [[TagList]]
     # [[LookupFile]]
-    # [[visual-studio]]
+    # [[VisualStudio]]
     # [[EchoFunc]]
  # [[OtherVimPlugins|Other vim plugins]]
     # [[vimwiki]]
     # [[surround]]
     # [[EnhancedCommentify]]
-    # [[cmdline-complete]]
+    # [[CmdlineComplete]]
     # [[visincr]]
     # [[OmniCppComplete]]
  # [[TipsAndTricks|Tips & Tricks]]
