--- a/_doc/Install.wiki
+++ b/_doc/Install.wiki
@@ -38,6 +38,17 @@ User who already have his own third-part plugins, can choose this pure version f
 The third-part plugin patches contains all patched version plugins. User who want to compare
 the difference between the original plugin and patched version, can download this package.
 
+=== exVim Easy Edition ===
+
+The exVim Easy Edition is a branch version create by Yu Jian Rong. It is a custom version which
+aim in ease the complex key mapping of exVim. It provide online help in each ex-plugin so that user
+don't need to remember too much key mapping at one time. But since the mapping of the key is different
+with the official exVim, the operation are not consist with the document in the exVim web-site.
+
+More details check:
+
+[http://code.google.com/p/exvimeasy/]
+
 === Which one should I choose? ===
 
 For lazy vim user `;p`, who want to have a try exVim quickly, could download exVim-installer. 
@@ -51,7 +62,7 @@ IDE like editor.
 
 For advance vim user, who have his own plugins and customization, could download ex-plugin-packages
 to install, and download third-part plugin patches as an option. Also can download the full-packages
-to pick up useful plugin or _vimrc scripts.
+to pick up useful plugin or `.vimrc` scripts.
 
 NOTE: you can skip the sections below if you choose installer.
 
@@ -69,15 +80,15 @@ will slow down the performance, so why not use a high speed version?
 Here is my compile options:
 
 {{{
-nmake -f Make_mvc.mak GUI=yes PYTHON=d:\exDev\Python25 DYNAMIC_PYTHON=YES PYTHON_VER=25
+nmake -f Make_mvc.mak GUI=yes PYTHON=d:\exDev\tools\Python25 DYNAMIC_PYTHON=YES PYTHON_VER=25
 }}}
 
 === install exVim packages ===
 
 After you install vim, extract your chosen package of exVim in your vim directory. For example 
 you install vim in d:\exDev\vim, then after you extract the package, you will have files in 
-    * d:\exDev\vim\toolkit
-    * d:\exDev\vim\vmifiles
+    * d:\exDev\exVim\toolkit
+    * d:\exDev\exVim\vmifiles
 
 === install third part tools ===
 
@@ -139,25 +150,25 @@ computer:
 
 {{{
 EX_DEV = d:\exDev
-PATH += %EX_DEV%\vim\vim72
-PATH += %EX_DEV%\MinGW\bin
-PATH += %EX_DEV%\GnuWin32\bin
-PATH += %EX_DEV%\Graphviz\bin
+PATH += %EX_DEV%\exVim\vim72
+PATH += %EX_DEV%\tools\MinGW\bin
+PATH += %EX_DEV%\tools\GnuWin32\bin
+PATH += %EX_DEV%\tools\Graphviz\bin
 }}}
 
 === setup toolkit path ===
 
-By default, exVim install the toolkit folder in the path $EX_DEV/vim/toolkit. But you can change this
-path to your own place. To change the path, you need to set ex_toolkit_path variable in `_vimrc`, and
+By default, exVim install the toolkit folder in the path $EX_DEV/exVim/toolkit. But you can change this
+path to your own place. To change the path, you need to set ex_toolkit_path variable in `.vimrc`, and
 copy the toolkit folder to that path. For example:
 
 {{{
-let g:ex_toolkit_path = 'd:\exDev\toolkit'
+let g:ex_toolkit_path = 'd:\exDev\exVim\toolkit'
 }}}
 
-=== setup _vimrc ===
+=== setup .vimrc ===
 
-Finally, you need to setup your _vimrc so that you can use ex-plugins. Check the *setup _vimrc*
+Finally, you need to setup your .vimrc so that you can use ex-plugins. Check the *setup .vimrc*
 section below for detail.
 
 == install exVim in unix/linux ==
@@ -197,12 +208,10 @@ sudo make install
 
 === install exVim packages ===
 
-After you install vim, extract your chosen package of exVim in your vim share directory. For example 
-your vim share directory is /usr/local/share/vim, then after you extract the package, you will have files in 
+After you install vim, extract your chosen package of exVim, then copy and rename the folders as:
 
-    * cp exDev/vim/toolkit ~/toolkit
-    * cp exDev/vim/vimfiles ~/.vim
-    * cp exDev/vim/doc ~/.vim/doc (not necessary)
+    * cp -R toolkit ~/.toolkit
+    * cp -R vimfiles ~/.vim
 
 === install third part tools ===
 
@@ -229,27 +238,27 @@ sudo apt-get install python
 
 === setup environment variables ===
 
-Set your environment variable in `_vimrc`. The value must be the *_parent_* driectory you install vim. 
-For example, if you install vim in HOME directory ("~"), 
-the script in `_vimrc` should be:
+Set your environment variable in `.vimrc`. The value must be the *_parent_* driectory you install exVim. 
+For example, if you install exVim in exDev folder in HOME directory ("~"), 
+the script in `.vimrc` should be:
 
 {{{
-let $EX_DEV = '~'
+let $EX_DEV = '~/exDev'
 }}}
 
 === setup toolkit path ===
 
-By default, exVim install the toolkit folder in the path $EX_DEV/vim/toolkit. But you can change this
+By default, exVim install the toolkit folder in the path $EX_DEV/exVim/toolkit. But you can change this
 path to your own place. To change the path, you need to set ex_toolkit_path variable in `_vimrc`, and
 copy the toolkit folder to that path. For example:
 
 {{{
-let g:ex_toolkit_path = '~/toolkit'
+let g:ex_toolkit_path = '~/.toolkit'
 }}}
 
-=== setup _vimrc ===
+=== setup .vimrc ===
 
-Finally, you need to setup your _vimrc so that you can use ex-plugins. Check the *setup _vimrc*
+Finally, you need to setup your _vimrc so that you can use ex-plugins. Check the *setup .vimrc*
 section below for detail.
 
 == install part of exVim ==
@@ -258,19 +267,19 @@ section below for detail.
 You can install part of exVim though it is not recommended. Check the "install part of
 exVim" in [[Misc]] for detail.
 
-== setup vimrc ==
+== setup .vimrc ==
 --------------------------------------------------------------------------------------
 
-=== set from _vimrc_ex ===
+=== set from .vimrc_ex ===
 
 You have two way to setup your _vimrc:
- # source the `_vimrc_ex` directly.  
- # merge the `_vimrc_ex` to your `_vimrc`.
+ # source the `.vimrc_ex` directly.  
+ # merge the `.vimrc_ex` to your `.vimrc`.
 
-By sourcing the `_vimrc_ex`, you can write code below at the end of you _vimrc:
+By sourcing the `.vimrc_ex`, you can write code below at the end of you .vimrc:
 
 {{{
-source $VIM\_vimrc_ex
+source $VIM\.vimrc_ex
 }}}
 
 By merging, here is my suggestion. go to the section mark:
@@ -291,10 +300,10 @@ And check the script below it. The settings of each plugin are separate by the m
 
 I recommend merge and custom all the "ex" plugin scripts.
 
-=== must have _vimrc settings ===
+=== must have .vimrc settings ===
 
 exVim provides lots of variable for customization. (like those key-mappings and variable 
-settings in `_vimrc_ex`). You can get all settings in [[DetailsOfExPlugins|Details of ex-plugins]]. 
+settings in `.vimrc_ex`). You can get all settings in [[DetailsOfExPlugins|Details of ex-plugins]]. 
 Most of them are optional. But there are settings you must have.
 
 To let the tags jump correctly in exVim, you need to have:
@@ -316,4 +325,3 @@ And you need to use \bd close buffer instead of :q directly. Actually it is a pr
 discussed in vim tips wiki, the 
 [http://takewii.com/index.php?hl=f5&q=uggc%3A%2F%2Fivz.jvxvn.pbz%2Fjvxv%2FQryrgvat_n_ohssre_jvgubhg_pybfvat_gur_jvaqbj tip 165].
 The detail explanation is in [[KnownIssues|Known Issues]].
-
