--- a/_doc/ChangeLog.wiki
+++ b/_doc/ChangeLog.wiki
@@ -8,6 +8,12 @@
 = Change Log =
 --------------------------------------------------------------------------------------
 
+== 8.04 ==
+ * New features
+ * Changes
+    * update cscope to 15.7a
+ * Bug fix
+
 == 8.03 ==
  * New features
     * let make syntax support external comments.
