--- a/_doc/ChangeLog.wiki
+++ b/_doc/ChangeLog.wiki
@@ -12,6 +12,7 @@
  * New features
     * support swig error format.
     * add swig syntax highlight.
+    * add csharp syntax highlight for special mark labels.
  * Changes
     * update vimwiki to 0.9.701.
     * update cscope to 15.7a.
