--- a/_doc/ChangeLog.wiki
+++ b/_doc/ChangeLog.wiki
@@ -21,6 +21,7 @@
     * disable auto-comment for c# language.
     * always show status-line.
     * change comment mathod for c in EnhancedCommentify, instead of using `/**/` we use `//` like cpp. 
+    * change guifont in win32 to Bitstream_Vera_Sans_Mono:h10
  * Bug fix
     * fix exQuickFix open a file another programme already editing issue.
 
