--- a/_doc/ChangeLog.wiki
+++ b/_doc/ChangeLog.wiki
@@ -23,6 +23,7 @@
     * change comment mathod for c in EnhancedCommentify, instead of using `/**/` we use `//` like cpp. 
     * change guifont in win32 to Bitstream_Vera_Sans_Mono:h10.
     * Not allow exGlobalSearch running in stand-alone mode, this prevent exGlobalSearch show error message.
+    * let exQuickFix support cs error format. 
  * Bug fix
     * fix exQuickFix open a file another programme already editing issue.
 
