--- a/_doc/DevLog.wiki
+++ b/_doc/DevLog.wiki
@@ -35,6 +35,7 @@ Then go to another directory like e:/Project/Dev, then clone a version for maste
 Then run
 
 {{{
+    git pull
     git merge origin/dev
 }}}
 
